--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.18.1",
     "jquery": "^3.5.1",
+    "mockjs": "^1.1.0",
+    "prettier": "^2.1.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.4.8"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
