--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "axios": "^0.21.0",
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.18.1",
+    "element-theme": "^2.0.1",
+    "element-ui": "^2.14.0",
     "jquery": "^3.5.1",
     "mockjs": "^1.1.0",
     "prettier": "^2.1.2",
     "vue": "^2.5.2",
+    "vue-axios": "^3.1.3",
     "vue-router": "^3.4.8"
   },
   "devDependencies": {
@@ -43,6 +46,7 @@
     "copy-webpack-plugin": "^4.0.1",
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
+    "element-theme-chalk": "^2.14.0",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
@@ -53,7 +57,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "eslint-plugin-vue": "^4.0.0",
     "extract-text-webpack-plugin": "^3.0.0",
-    "file-loader": "^1.1.4",
+    "file-loader": "^1.1.11",
     "friendly-errors-webpack-plugin": "^1.6.1",
     "html-webpack-plugin": "^2.30.1",
     "jest": "^22.0.4",
