--- a/.prettierrc
+++ b/.prettierrc
@@ -1,6 +1,5 @@
-// .prettierrc
-{
-    "tabWidth": 2,	// tab缩进大小,默认为2
+  {
+    "tabWidth": 4,	// tab缩进大小,默认为2
     "useTabs": true, 	// 使用tab缩进，默认false
     "semi": false,		// 使用分号, 默认true
     "singleQuote": true,	// 使用单引号, 默认false(在jsx中配置无效, 默认都是双引号)
@@ -8,5 +7,6 @@
     "bracketSpacing": true,	// 对象中的空格 默认true
     "jsxBracketSameLine": false,	// JSX标签闭合位置 默认false
     "arrowParens": "avoid",	// 箭头函数参数括号，默认avoid 可选 avoid| always,avoid 能省略括号的时候就省略 例如x => x，always 总是有括号
-    "htmlWhitespaceSensitivity": "strict"	//html空格严格程度，可选<css|strict|ignore>
+    "htmlWhitespaceSensitivity": "strict",	//html空格严格程度，可选<css|strict|ignore>
+    "printWidth": 120
   }
