--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "element-ui": "^2.14.0",
     "jquery": "^3.5.1",
     "mockjs": "^1.1.0",
-    "prettier": "^2.1.2",
     "vue": "^2.5.2",
     "vue-axios": "^3.1.3",
     "vue-router": "^3.4.8"
@@ -70,6 +69,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
+    "prettier": "2.1.2",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
