--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "cross-spawn": "^5.0.1",
     "css-loader": "^0.28.0",
     "element-theme-chalk": "^2.14.0",
-    "eslint": "^4.15.0",
+    "eslint": "^4.19.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.7.1",
@@ -69,7 +69,7 @@
     "postcss-import": "^11.0.0",
     "postcss-loader": "^2.0.8",
     "postcss-url": "^7.2.1",
-    "prettier": "2.1.2",
+    "prettier": "^2.1.2",
     "rimraf": "^2.6.0",
     "selenium-server": "^3.0.1",
     "semver": "^5.3.0",
