--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "element-theme": "^2.0.1",
     "element-ui": "^2.14.0",
     "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
     "mockjs": "^1.1.0",
     "vue": "^2.5.2",
     "vue-axios": "^3.1.3",
